// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageFeature > renders with as correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageFeature > renders with description correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
    <div data-slot="description" class="">Description</div>
  </div>
</div>"
`;

exports[`PageFeature > renders with leading slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="leading" class="">Leading slot</div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="">Title</div>
    <div data-slot="description" class="">Description</div>
  </div>
</div>"
`;

exports[`PageFeature > renders with title correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="">Title</div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageFeature > renders with to correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class=""><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Feature link" class="peer focus:outline-none"><span class="inset-0 absolute" aria-hidden="true"></span></a>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;
